@@ -319,7 +319,7 @@
       <module id="orca" branch="gnome-2-16"/>
       <module id="pessulus"/>
       <module id="sabayon"/>
-      <module id="sound-juicer"/>
+      <module id="sound-juicer" branch="gnome-2-16"/>
       <module id="tomboy" branch="gnome-2-16"/>
       <module id="totem" branch="gnome-2-16"/>
       <module id="vino" branch="gnome-2-16"/>
@@ -406,7 +406,7 @@
       <module id="nautilus-cd-burner"/>
       <module id="orca" branch="gnome-2-18"/>
       <module id="seahorse" branch="gnome-2-18"/>
-      <module id="sound-juicer"/>
+      <module id="sound-juicer" branch="gnome-2-16"/>
       <module id="tomboy" branch="gnome-2-18"/>
       <module id="totem" branch="gnome-2-18"/>
       <module id="vino"/>
