@@ -1,3 +1,8 @@
+2007-03-27  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched sound-juicer for 2.16 and 2.18.
+
 2007-03-26  Abel Cheung  <abelcheung@gmail.com>
 
 	* translation-teams.xml.in: Revert part of my change, I really shouldn't
